use native ruby

--- a/ansible/roles/init/tasks/main.yaml
+++ b/ansible/roles/init/tasks/main.yaml
@@ -1,21 +1,17 @@
 - name: yum update
   yum: name=* state=latest
 
-- name: install docker
-  yum: name=docker state=latest
+- name: install firewalld for disable
+  yum: name=firewalld state=latest
 
-- name: create docker group
-  group: name=docker
-
-- name: add user to docker group
-  user: name=vagrant groups=docker append=yes
-
-- name: up docker
+- name: stop and disable firewalld
   systemd:
-    name: docker
-    state: started
-    enabled: yes
-  become: yes
+    name: firewalld
+    state: stopped
+    enabled: no
 
 - name: install vim
   yum: name=vim state=latest
+
+- name: install nodejs
+  yum: name=nodejs enablerepo=epel
